<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="fab_content_description">Adicionar tarefa</string>
    <string name="btn_completed_tasks">Tarefas Concluídas</string>
    <string name="created_at_field">Criada em: 15/12/2023 - 14:32</string>
    <string name="due_date_field">Prazo final: 25/12/2023 - 16:00</string>
    <string name="allow_notification_field">Deseja receber notifição próximo ao prazo final?</string>
    <string name="add_new_task">Adicionar Tarefa</string>
    <string name="edit_task">Editar Tarefa</string>
    <string name="new_task_title">Título da tarefa</string>
    <string name="completed_tasks_screen_title">TAREFAS CONCLUÍDAS</string>
    <string name="new_task_title_helptext">Ex.: Colocar o lixo na rua</string>
    <string name="new_task_description">Descrição da tarefa</string>
    <string name="new_task_description_helptext">Ex.: Não esquecer de tirar do banheiro e cozinha</string>
    <string name="new_task_due_date">PRAZO FINAL</string>
    <string name="new_task_back_btn">VOLTAR</string>
</resources>